# wordle_zhou_evan

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  start
docs/: Makefile  conf.py  make.bat
src/wordle_yz4661/: __init__.py  wordle_yz4661.py
tests/: test_wordle_yz4661.py
wordle_yz4661/: CHANGELOG.md  LICENSE
wordle_yz4661/docs/: example.ipynb
wordle_yz4661/tests/: test_wordle_yz4661.py
