[tool.poetry]
name = "wordle_yz4661"
version = "0.1.0"
description = "wordle pkg for hw07"
authors = ["Evan Zhou"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "myst-nb (>=1.3.0,<2.0.0)",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
